Fixes. Added shutdown endpoint
